--- a/user/index.html
+++ b/user/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="../assets/css/demo_1/style.css">
     <!-- End Layout styles -->
     <link rel="shortcut icon" href="../assets/images/favicon.png" />
+    <link rel="stylesheet" type="text/css" href="../assets/css/card.css">
   </head>
   <body>
     <div class="container-scroller">
@@ -89,42 +90,52 @@
         </nav>
         <!-- partial -->
         <div class="main-panel">
-          <div class="content-wrapper">
-            <!-- Page Title Header Starts-->
-            <div class="row page-title-header">
-            </div>
-            <div class="row">
-              <div class="col-md-12">
+        <div class="content-wrapper">
+            <div class="col-md-12">
+              <div class="card py-5 px-5">
                 <div class="row">
-
-
-                  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                    <div class="modal-dialog" role="document">
-                      <div class="modal-content">
-                        <div class="modal-header">
-                          <h5 class="modal-title" id="exampleModalLabel">ID Card</h5>
-                          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                          </button>
-                        </div>
-                        <div class="modal-body">
-                          ...
-                        </div>
-                        <div class="modal-footer">
-                          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <div class="col-md-6">
+                      <div class="credit-card-wrap">
+                        <div class="mk-icon-world-map"></div>
+                        <div class="credit-card-inner">
+                          <header class="header">
+                            <div class="credit-logo">
+                              <div class="shape"><span class="txt">NP</span></div> <span class="text">NUPENG</span>
+                            </div>
+                          </header>
+                          <div class="mk-icon-sim"><img src="../assets/images/faces/profile/profile.jpg" style="height: 5em"></div>
+                          <div class="credit-font credit-card-number">Ajadi Temitope</div>
+                          <footer class="foot">
+                            <div class="clearfix">
+                              <div class="pull-left">
+                                <div class="credit-card-date"><span class="title">Expires End</span><span class="credit-font">01/21</span></div>
+                                <div class="credit-font credit-author">Sales</div>
+                              </div>
+                              <div class="pull-right"><div class="mk-icon-visa"></div></div>
+                            </div>
+                          </footer>
                         </div>
                       </div>
+
+                    </div>
+
+                    <div class="col-md-6">
+                      <div class="credit-card-wrap">
+                        <div class="mk-icon-world-map"></div>
+                        <div class="credit-card-inner">
+                          <div class="credit-font">
+                            <p>This identity card is not transferable. It must be produced at any time if requested by any officer of the company or authorised person(s)</p>
+
+                            <p>This identity card is not transferable. It must be produced at any time if requested by any officer of the company or authorised person(s)</p>
+                          </div>
+                        </div>
+                      </div>
+
                     </div>
                   </div>
-
-                  <div class="col-md-12 grid-margin">
-
-                  </div>
-                  
-                </div>
-              </div>
             </div>
-          </div>
+            </div>
+        </div>
           <!-- content-wrapper ends -->
           <!-- partial:partials/_footer.html -->
           <footer class="footer">
