--- a/admin/index.html
+++ b/admin/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="../assets/css/demo_1/style.css">
     <!-- End Layout styles -->
     <link rel="shortcut icon" href="../assets/images/favicon.png" />
+    <link rel="stylesheet" type="text/css" href="../assets/css/card.css">
   </head>
   <body>
     <div class="container-scroller">
@@ -146,7 +147,46 @@
                           </button>
                         </div>
                         <div class="modal-body">
-                          ...
+                          <div class="row">
+                    <div class="col-md-12 py-1">
+                      <div class="credit-card-wrap">
+                        <div class="mk-icon-world-map"></div>
+                        <div class="credit-card-inner">
+                          <header class="header">
+                            <div class="credit-logo">
+                              <div class="shape"><span class="txt">NP</span></div> <span class="text">NUPENG</span>
+                            </div>
+                          </header>
+                          <div class="mk-icon-sim"><img src="../assets/images/faces/profile/profile.jpg" style="height: 5em"></div>
+                          <div class="credit-font credit-card-number">Ajadi Temitope</div>
+                          <footer class="foot">
+                            <div class="clearfix">
+                              <div class="pull-left">
+                                <div class="credit-card-date"><span class="title">Expires End</span><span class="credit-font">01/21</span></div>
+                                <div class="credit-font credit-author">Sales</div>
+                              </div>
+                              <div class="pull-right"><div class="mk-icon-visa"></div></div>
+                            </div>
+                          </footer>
+                        </div>
+                      </div>
+
+                    </div>
+
+                    <div class="col-md-12">
+                      <div class="credit-card-wrap">
+                        <div class="mk-icon-world-map"></div>
+                        <div class="credit-card-inner">
+                          <div class="credit-font">
+                            <p>This identity card is not transferable. It must be produced at any time if requested by any officer of the company or authorised person(s)</p>
+
+                            <p>This identity card is not transferable. It must be produced at any time if requested by any officer of the company or authorised person(s)</p>
+                          </div>
+                        </div>
+                      </div>
+
+                    </div>
+                  </div>
                         </div>
                         <div class="modal-footer">
                           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -206,6 +246,59 @@
                       </div>
                     </div>
                   </div>
+
+                  <div class="col-md-12 grid-margin">
+                    <div class="card">
+                      <div class="card-body">
+                        <div class="d-flex justify-content-between">
+                          <h4 class="card-title mb-0">Agents</h4>
+                        </div>
+                        <p>Registered Agents</p>
+                        <div class="table-responsive">
+                          <table class="table table-striped table-hover">
+                            <thead>
+                              <tr>
+                                <th>Name</th>
+                                <th>D.O.B</th>
+                                <th>Phone Number</th>
+                                <th>Email</th>
+                                <th>Vehicle Number</th>
+                                <th>Zone</th>
+                                <th>State</th>
+                                <th>Unit</th>
+                                <th>Action</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                              <tr>
+                                <td>INV-87239</td>
+                                <td>Viola Ford</td>
+                                <td>Paid</td>
+                                <td>20 Jan 2019</td>
+                                <td>$755</td>
+                                <td>$755</td>
+                                <td>$755</td>
+                                <td>$755</td>
+                                <td><label class="badge badge-success" data-toggle="modal" data-target="">View</label></td>
+                              </tr>
+                              <tr>
+                                <td>INV-87239</td>
+                                <td>Dylan Waters</td>
+                                <td>Unpaid</td>
+                                <td>23 Feb 2019</td>
+                                <td>$800</td>
+                                <td>$755</td>
+                                <td>$755</td>
+                                <td>$755</td>
+                                <td><label class="badge badge-success">View</label></td>
+                              </tr>
+                            </tbody>
+                          </table>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
                   
                 </div>
               </div>
